--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,28 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vanilla App Template</title>
+  <title>Pixabay</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
 
-  <form class="form">
-    <label>
-      <input type="text" name="search-text" placeholder="Search images..." required>
-    </label>
-    <button type="submit">Search</button>
-  </form>
+  <div class="wrapper">
+    <form class="form">
+      <label>
+        <input type="text" name="search-text" placeholder="Search images..." required>
+      </label>
+      <button type="submit">Search</button>
+    </form>
+
+    <span class="loader hidden"></span>
+
+  </div>
+  <ul class="gallery">
+
+  </ul>
+  </div>
+
 
 
   <script type="module" src="./main.js"></script>
